RESOLVED FIXED 77698
ColorChooserClient is missing a virtual destructor
https://bugs.webkit.org/show_bug.cgi?id=77698
Summary ColorChooserClient is missing a virtual destructor
Keishi Hattori
Reported 2012-02-02 18:08:41 PST
Need to add a virtual destructor to ColorChooserClient.
Attachments
Patch (1.15 KB, patch)
2012-02-02 19:12 PST, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2012-02-02 19:12:00 PST
Kent Tamura
Comment 2 2012-02-02 19:19:24 PST
Comment on attachment 125236 [details] Patch ok
WebKit Review Bot
Comment 3 2012-02-02 21:26:34 PST
Comment on attachment 125236 [details] Patch Clearing flags on attachment: 125236 Committed r106625: <http://trac.webkit.org/changeset/106625>
WebKit Review Bot
Comment 4 2012-02-02 21:26:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.