ColorChooserClient is missing a virtual destructor https://bugs.webkit.org/show_bug.cgi?id=77698

Reviewed by Kent Tamura.

* platform/ColorChooserClient.h:
(WebCore::ColorChooserClient::~ColorChooserClient): Added.


Canonical link: https://commits.webkit.org/94566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106625 268f45cc-cd09-0410-ab3c-d52691b4dbfc