Source/WebCore/platform/ColorChooserClient.h
@@ -13,6 +13,8 @@ class Color;
 
 class ColorChooserClient {
 public:
+    virtual ~ColorChooserClient() { }
+
     virtual void didChooseColor(const Color&) = 0;
     virtual void didEndChooser() = 0;
 };
